--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "thread": "cpp"
-    }
+  "files.associations": {
+    "iostream": "cpp",
+    "thread": "cpp"
+  },
+  "C_Cpp_Runner.msvcBatchPath": ""
 }
